formatted projects into cards

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+
 }
 
 .App-logo {
@@ -44,4 +45,15 @@
 .link{
   margin-left: 5em;
   margin-right: 5em;
+}
+
+.projectCards{
+  display: flex;
+   flex-direction: row;
+   flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.about{
+  background-color: white;
 }
